2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Add noreturn attributes and remove unreachable code.

	* grub-core/bus/cs5536.c (grub_cs5536_smbus_wait): Remove unreachable
	code.
	* grub-core/commands/halt.c (grub_cmd_halt): Remove unreachable
	code. Mark as noreturn.
	* grub-core/commands/minicmd.c (grub_mini_cmd_exit): Likewise.
	* grub-core/commands/reboot.c (grub_cmd_reboot): Likewise.
	* grub-core/disk/efi/efidisk.c (grub_efidisk_get_device_name): Remove
	unreachable code.
	* grub-core/kern/main.c (grub_main): Mark as noreturn.
	* grub-core/kern/rescue_reader.c (grub_rescue_run): Likewise.
	* grub-core/lib/posix_wrap/stdlib.h (abort): Likewise.
	* grub-core/normal/menu.c (run_menu): Remove unreachable code.
	* include/grub/kernel.h (grub_main): Mark as noreturn.
	* include/grub/reader.h (grub_rescue_run): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/qemu/memory.h (grub_machine_mmap_init): Remove
	redundant declaration.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/net.h (grub_net_network_level_interfaces): Remove
	redundant declaration.
	(FOR_NET_NETWORK_LEVEL_INTERFACES): Move to appropriate place.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hdparm.c (le16_to_char): Make src and dest uint16 *
	to ensure alignment.
	(grub_hdparm_print_identify): Make argument uint16 * to ensure
	alignment. Ensure tmp alignment.
	(grub_cmd_hdparm): Ensure buf alignment.
	* grub-core/disk/ata.c (grub_ata_strncpy): Make src and dest uint16 *
	to ensure alignment.
	(grub_ata_dumpinfo): Ensure text alignment.
	(grub_atapi_identify): Preserve alignment invariant.
	(grub_ata_identify): Likewise. Use grub_get_unaligned32 when necessary.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/emu/misc.h (xasprintf): Add missing format attribute.
	* include/grub/mips/kernel.h (grub_halt): Remove redundant declaration.